fix(core): issue with importing animation styles

--- a/packages/core/src/styles.scss
+++ b/packages/core/src/styles.scss
@@ -1,3 +1,7 @@
+@import "./animations/inAnimation";
+@import "./animations/inBodyAnimation";
+@import "./animations/outAnimation";
+
 $types: "base", "info", "success", "warning", "error";
 $namespace: "toastup";
 
@@ -211,6 +215,11 @@ $namespace: "toastup";
 
   &--visible {
     opacity: 1;
+    z-index: 9999;
+  }
+
+  &--overloading-stack {
+    opacity: 0;
     z-index: 9999;
   }
 
