--- a/packages/core/src/styles.scss
+++ b/packages/core/src/styles.scss
@@ -218,10 +218,10 @@ $namespace: "toastup";
     z-index: 9999;
   }
 
-  &--overloading-stack {
-    opacity: 0;
-    z-index: 9999;
-  }
+  // &--overloading-stack {
+  //   opacity: 0;
+  //   z-index: 9999;
+  // }
 
   &-container {
     align-items: center;
