--- a/packages/docs/src/css/custom.css
+++ b/packages/docs/src/css/custom.css
@@ -6,25 +6,27 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #ff9c3f;
+  --ifm-color-primary-dark: #ff8c1f;
+  --ifm-color-primary-darker: #ff830f;
+  --ifm-color-primary-darkest: #df6c00;
+  --ifm-color-primary-light: #ffac5f;
+  --ifm-color-primary-lighter: #ffb56f;
+  --ifm-color-primary-lightest: #ffcd9e;
+  --ifm-code-background: #111827;
+
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme="dark"] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #f7af88;
+  --ifm-color-primary-dark: #f59764;
+  --ifm-color-primary-darker: #f38b52;
+  --ifm-color-primary-darkest: #f0671c;
+  --ifm-color-primary-light: #f9c7ac;
+  --ifm-color-primary-lighter: #fbd3be;
+  --ifm-color-primary-lightest: #fef7f4;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
