--- a/packages/docs/src/components/Hero/Hero.module.scss
+++ b/packages/docs/src/components/Hero/Hero.module.scss
@@ -1,17 +1,18 @@
+@use "sass:color";
+
 .container {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-  padding: 1em;
-  margin: 3em 0;
+  backdrop-filter: blur(20px);
 
   background: rgba(255, 255, 255, 0.3);
-  box-shadow: 0 8px 32px 0 rgba(46, 46, 46, 0.37);
-  backdrop-filter: blur(20px);
-  -webkit-backdrop-filter: blur(20px);
-  border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
+  border-radius: 10px;
+  box-shadow: 0 8px 32px 0 rgba(46, 46, 46, 0.37);
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  margin: 3em 0;
+  padding: 1em;
+  width: 100%;
 }
 
 .additionalSettings {
@@ -21,16 +22,16 @@
 .row {
   display: flex;
   flex-direction: row;
-  width: 100%;
-  margin: 1em 0;
   gap: 0.5em;
+  margin: 1em 0;
+  width: 100%;
 }
 
 .element {
-  width: 100%;
   display: flex;
   flex-direction: column;
   padding: 0.5em;
+  width: 100%;
 }
 
 .buttons {
@@ -40,64 +41,63 @@
 }
 
 .button {
-  width: 50%;
+  background-color: #ff9c3f;
+  border: 0;
+  border-radius: 5px;
+  box-shadow: 0 2px 25px #f6d6b8;
+  color: #000;
+  font-weight: bold;
   height: 3em;
   margin: 0.5em;
-  border-radius: 5px;
-  border: none;
-  font-weight: bold;
   text-transform: uppercase;
-  background-color: #ff9c3f;
-  box-shadow: 0 2px 25px #f6d6b8;
   transition: all 0.2s ease-in;
-  color: #000;
+  width: 50%;
 
   &:focus,
   &:hover {
+    background-color: color.adjust($color: #ff9c3f, $lightness: -5%);
     outline: 0;
     transform: scale(0.95);
-    background-color: darken(#ff9c3f, 5%);
   }
 
   &:active {
+    background-color: color.adjust($color: #ff9c3f, $lightness: -10%);
     transform: scale(0.9);
-    background-color: darken(#ff9c3f, 10%);
   }
 }
 
 .input {
-  width: 100%;
-  border-radius: 5px;
   border: solid 1px;
   border-color: #ff9c3f;
+  border-radius: 5px;
+  padding: 10px;
   transition:
     border-color 0.2s ease-in-out,
     box-shadow 0.2s ease-in-out;
-  padding: 10px;
+  width: 100%;
 
   &:focus {
-    outline: 0;
     border-color: #f6d6b8;
     box-shadow: 0 2px 25px #f6d6b8;
+    outline: 0;
   }
 }
 
 .select {
-  width: 100%;
-  border-radius: 5px;
+  appearance: none;
   border: solid 1px;
-  padding: 10px;
   border-color: #ff9c3f;
+  border-radius: 5px;
+  padding: 10px;
   transition:
     border-color 0.2s ease-in-out,
     box-shadow 0.2s ease-in-out;
-  -moz-appearance: none;
-  -webkit-appearance: none;
+  width: 100%;
 
   &:focus {
-    outline: 0;
     border-color: #f6d6b8;
     box-shadow: 0 2px 25px #f6d6b8;
+    outline: 0;
   }
 }
 
@@ -123,16 +123,31 @@
 
   &:focus,
   &:hover {
-    background-color: darken(#f6d6b8, 5%);
+    background-color: color.adjust($color: #f6d6b8, $lightness: -5%);
   }
 
   &:active {
-    background-color: darken(#f6d6b8, 10%);
+    background-color: color.adjust($color: #f6d6b8, $lightness: -10%);
   }
 }
 
 [data-theme="dark"] {
   .button {
     box-shadow: 0 2px 25px #aeaeae;
+  }
+
+  .container {
+    background: rgba(69, 68, 68, 0.8);
+    position: relative;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .label {
+    font-size: 1em;
+  }
+
+  .codeBlocks {
+    flex-direction: column;
   }
 }
