--- a/packages/docs/src/components/Hero/Hero.module.scss
+++ b/packages/docs/src/components/Hero/Hero.module.scss
@@ -1,5 +1,3 @@
-@use "sass:color";
-
 .container {
   backdrop-filter: blur(20px);
 
@@ -40,31 +38,31 @@
   margin-top: 2em;
 }
 
-.button {
-  background-color: #ff9c3f;
-  border: 0;
-  border-radius: 5px;
-  box-shadow: 0 2px 25px #f6d6b8;
-  color: #000;
-  font-weight: bold;
-  height: 3em;
-  margin: 0.5em;
-  text-transform: uppercase;
-  transition: all 0.2s ease-in;
-  width: 50%;
+// .button {
+//   background-color: #ff9c3f;
+//   border: 0;
+//   border-radius: 5px;
+//   box-shadow: 0 2px 25px #f6d6b8;
+//   color: #000;
+//   font-weight: bold;
+//   height: 3em;
+//   margin: 0.5em;
+//   text-transform: uppercase;
+//   transition: all 0.2s ease-in;
+//   width: 50%;
 
-  &:focus,
-  &:hover {
-    background-color: color.adjust($color: #ff9c3f, $lightness: -5%);
-    outline: 0;
-    transform: scale(0.95);
-  }
+//   &:focus,
+//   &:hover {
+//     background-color: color.adjust($color: #ff9c3f, $lightness: -5%);
+//     outline: 0;
+//     transform: scale(0.95);
+//   }
 
-  &:active {
-    background-color: color.adjust($color: #ff9c3f, $lightness: -10%);
-    transform: scale(0.9);
-  }
-}
+//   &:active {
+//     background-color: color.adjust($color: #ff9c3f, $lightness: -10%);
+//     transform: scale(0.9);
+//   }
+// }
 
 .input {
   border: solid 1px;
@@ -118,18 +116,18 @@
   width: 100%;
 }
 
-.closeAllButton {
-  background-color: #f6d6b8;
+// .closeAllButton {
+//   background-color: #f6d6b8;
 
-  &:focus,
-  &:hover {
-    background-color: color.adjust($color: #f6d6b8, $lightness: -5%);
-  }
+//   &:focus,
+//   &:hover {
+//     background-color: color.adjust($color: #f6d6b8, $lightness: -5%);
+//   }
 
-  &:active {
-    background-color: color.adjust($color: #f6d6b8, $lightness: -10%);
-  }
-}
+//   &:active {
+//     background-color: color.adjust($color: #f6d6b8, $lightness: -10%);
+//   }
+// }
 
 [data-theme="dark"] {
   .button {
