--- a/packages/docs/src/pages/index.module.scss
+++ b/packages/docs/src/pages/index.module.scss
@@ -3,9 +3,18 @@
 }
 
 .features {
+  ul {
+    list-style: none;
+  }
+
   li {
     font-size: 16px;
     color: #000;
+
+    &::before{
+      content: "⭐️";
+      margin-right: 1em;
+    }
   }
 }
 
