--- a/packages/docs/src/components/examples/examples.module.scss
+++ b/packages/docs/src/components/examples/examples.module.scss
@@ -1,3 +1,5 @@
+@use "sass:color";
+
 .button {
   width: 50%;
 }
@@ -15,7 +17,38 @@
   margin-right: 1em;
 }
 
-.customImageToast {
+.customToast {
+  $customColor: #00a0b0;
+
+  border: solid 1px $customColor;
+
+  i {
+    ellipse {
+      fill: $customColor;
+    }
+
+    path {
+      stroke: $customColor;
+    }
+  }
+
+  [class*="title"] {
+    color: $customColor;
+  }
+
+  [class*="progress-bar-foreground"] {
+    background: $customColor;
+  }
+
+  [class*="progress-bar-foreground"] {
+    background: $customColor;
+  }
+  [class*="progress-bar-progress-overlay"] {
+    background-color: color.adjust($color: $customColor, $lightness: 35%);
+  }
+}
+
+.customToastImage {
   width: 100%;
   height: 100%;
 }
