--- a/packages/docs/src/css/shared.module.scss
+++ b/packages/docs/src/css/shared.module.scss
@@ -254,16 +254,8 @@
     right: 0%;
   }
 
-  .blob3 {
-    left: 0;
-  }
-
-  .blob4 {
-    right: 0;
-  }
-
   .blob5 {
-    right: 0;
+    right: 20%;
     top: 121em;
   }
 }
